// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render correctly when the user is logged in 1`] = `
<Uncontrolled(Navbar)
  bsStyle="default"
  collapseOnSelect={true}
  fixedTop={true}
  id="header"
>
  <NavbarHeader>
    <NavbarBrand
      id="navbar-brand"
    >
      <Link
        replace={false}
        to="/"
      >
        Empact
      </Link>
    </NavbarBrand>
    <NavbarToggle />
  </NavbarHeader>
  <NavbarCollapse>
    <Nav
      bsClass="nav"
      justified={false}
      pullLeft={false}
      pullRight={false}
      stacked={false}
    >
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/petition/create"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={1}
        >
          Create
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/petitions"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={2}
        >
          Explore
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/search"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={3}
        >
          Search
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/help"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={4}
        >
          Help
        </NavItem>
      </LinkContainer>
    </Nav>
    <Nav
      bsClass="nav"
      justified={false}
      pullLeft={false}
      pullRight={true}
      stacked={false}
    >
      <NavDropdown
        eventKey={1}
        id="basic-nav-dropdown"
        title="testUsername"
      >
        <LinkContainer
          activeClassName="active"
          exact={false}
          replace={false}
          strict={false}
          to="/admin-panel"
        >
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            divider={false}
            eventKey={1.1}
            header={false}
          >
            Control Panel
          </MenuItem>
        </LinkContainer>
        <LinkContainer
          activeClassName="active"
          exact={false}
          replace={false}
          strict={false}
          to="/user/testUsername"
        >
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            divider={false}
            eventKey={1.1}
            header={false}
          >
            Profile
          </MenuItem>
        </LinkContainer>
        <LinkContainer
          activeClassName="active"
          exact={false}
          replace={false}
          strict={false}
          to="/settings"
        >
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            divider={false}
            eventKey={1.2}
            header={false}
          >
            Settings
          </MenuItem>
        </LinkContainer>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={true}
          header={false}
        />
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={1.3}
          header={false}
          onSelect={[Function]}
        >
          Logout
        </MenuItem>
      </NavDropdown>
    </Nav>
  </NavbarCollapse>
</Uncontrolled(Navbar)>
`;

exports[`Header should render correctly when the user is not logged in 1`] = `
<Uncontrolled(Navbar)
  bsStyle="default"
  collapseOnSelect={true}
  fixedTop={true}
  id="header"
>
  <NavbarHeader>
    <NavbarBrand
      id="navbar-brand"
    >
      <Link
        replace={false}
        to="/"
      >
        Empact
      </Link>
    </NavbarBrand>
    <NavbarToggle />
  </NavbarHeader>
  <NavbarCollapse>
    <Nav
      bsClass="nav"
      justified={false}
      pullLeft={false}
      pullRight={false}
      stacked={false}
    >
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/petition/create"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={1}
        >
          Create
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/petitions"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={2}
        >
          Explore
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/search"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={3}
        >
          Search
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/help"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={4}
        >
          Help
        </NavItem>
      </LinkContainer>
    </Nav>
    <Nav
      bsClass="nav"
      justified={false}
      pullLeft={false}
      pullRight={true}
      stacked={false}
    >
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/login"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={1}
        >
          Login
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/register"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={2}
        >
          Register
        </NavItem>
      </LinkContainer>
    </Nav>
  </NavbarCollapse>
</Uncontrolled(Navbar)>
`;
